objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>AAkPay__Add_to_Calendar__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;AAkPay__iCal_Id__c&amp;&quot;&amp;oid=&quot;&amp;$Organization.Id ,&quot;Add to Calendar&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__City_State_PostalCode__c</fullName>
        <formula>AAkPay__City__c +IF(NOT(ISBLANK(AAkPay__City__c)),&quot;, &quot;,&quot;&quot;)+  AAkPay__State__c  + &quot; &quot; + AAkPay__PostalCode__c</formula>
        <label>City State PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Azores</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegowina</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAkPay__Create_URL_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this to create a URL Token.  URL Tokens are useful when requesting payments using a public facing web link.
Activate/Use workflow rules to set this automatically.</inlineHelpText>
        <label>Create URL Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__Days_Remaining__c</fullName>
        <formula>EndDate-TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AAkPay__End_Date_Time_GMT__c</fullName>
        <description>Updated automatically on save from End Date, plus End Time</description>
        <label>End Date/Time GMT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__End_Date_Time_ISO8601__c</fullName>
        <label>End Date/Time ISO8601</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>0:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAkPay__Event_Brief_Description__c</fullName>
        <inlineHelpText>Brief description of event to show in calendar pop-up description of event and in add to calendar description.</inlineHelpText>
        <label>Event Brief Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Event_Date_Short__c</fullName>
        <formula>CASE(
MOD(StartDate- DATE(1900, 1, 7), 7),
0, &quot;Sun&quot;,
1, &quot;Mon&quot;,
2, &quot;Tue&quot;,
3, &quot;Wed&quot;,
4, &quot;Thu&quot;,
5, &quot;Fri&quot;,
6, &quot;Sat&quot;, &quot;Error&quot;) + &quot; &quot; +
TEXT(DAY(StartDate)) + &quot; &quot;+
CASE(MONTH(StartDate),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;Error&quot;) + &quot; &quot; +
IF(StartDate &lt;&gt; EndDate,
&quot; - &quot; +
CASE(
MOD(EndDate- DATE(1900, 1, 7), 7),
0, &quot;Sun&quot;,
1, &quot;Mon&quot;,
2, &quot;Tue&quot;,
3, &quot;Wed&quot;,
4, &quot;Thu&quot;,
5, &quot;Fri&quot;,
6, &quot;Sat&quot;, &quot;Error&quot;)+ &quot; &quot; +
TEXT(DAY(EndDate)) + &quot; &quot;+
CASE(MONTH(EndDate),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;Error&quot;) ,
&quot;&quot;)+
&quot; &quot; + TEXT(YEAR(EndDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date Short</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Event_Date__c</fullName>
        <formula>CASE(
MOD(StartDate- DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;, &quot;Error&quot;) + &quot; &quot; +
TEXT(DAY(StartDate)) + &quot; &quot;+
CASE(MONTH(StartDate),
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;Error&quot;) + &quot; &quot; +
IF(StartDate &lt;&gt; EndDate,
&quot; - &quot; +
CASE(
MOD(EndDate- DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;, &quot;Error&quot;)+ &quot; &quot; +
TEXT(DAY(EndDate)) + &quot; &quot;+
CASE(MONTH(EndDate),
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;Error&quot;) ,
&quot;&quot;)+
&quot; &quot; + TEXT(YEAR(EndDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Event_Name__c</fullName>
        <inlineHelpText>Name of event to display on registration form.  If not specified, then the Campaign Name will be used.</inlineHelpText>
        <label>Event Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Event_Page_URL__c</fullName>
        <inlineHelpText>Used if there is a specific web page with details on the event.  If specified, the Upcoming Events and Events Calendar pages will be directed to this page, vs. the booking page. 

If not specified, then the Events Page URL on the Payment Form is used.</inlineHelpText>
        <label>Event Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AAkPay__Event_Time__c</fullName>
        <formula>TEXT(AAkPay__Start_Time__c) +IF(NOT(OR(ISBLANK( TEXT(AAkPay__Start_Time__c)) , ISBLANK( TEXT(AAkPay__End_Time__c)) )), &quot; - &quot;,&quot;&quot;)+ TEXT(AAkPay__End_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Full_Address__c</fullName>
        <formula>AAkPay__Street__c +&quot; &quot; +  AAkPay__City_State_PostalCode__c + &quot; &quot; +TEXT( AAkPay__Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Fundraiser_Type__c</fullName>
        <label>Fundraiser Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAkPay__Fundraising_Page_Link__c</fullName>
        <formula>HYPERLINK(AAkPay__URL_Token__r.AAkPay__Full_Text_URL__c,&quot;Donate Now&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fundraising Page Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Fundraising_Page_Overview__c</fullName>
        <inlineHelpText>Text that will appear on the donation pages for each Peer-to-Peer Teams/Individuals pages.</inlineHelpText>
        <label>Fundraising Page Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AAkPay__Max_No_Tickets_Available__c</fullName>
        <inlineHelpText>The total number of all ticket types available.  If specified at the Campaign Level then that amount will override the amount specified at the Payment Type level.</inlineHelpText>
        <label>Max No. Tickets Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AAkPay__No_of_Booked_Tickets__c</fullName>
        <label>No. of Booked Tickets</label>
        <summarizedField>CampaignMember.AAkPay__No_of_Booked_Tickets__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AAkPay__Organiser_Address__c</fullName>
        <inlineHelpText>Address of the organisation that is setting up and running the event.  This will appear on the events registration page under the Contact Us section.</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AAkPay__Organiser_Contact__c</fullName>
        <inlineHelpText>Name of the Contact Person that is setting up and running the event.  This will appear on the events registration page under the Contact Us section.</inlineHelpText>
        <label>Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Organiser_Email__c</fullName>
        <inlineHelpText>Email for the organisation that is setting up and running the event.  This will appear on the events registration page under the Contact Us section.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AAkPay__Organiser_Fax__c</fullName>
        <inlineHelpText>Fax Number for the organisation that is setting up and running the event.  This will appear on the events registration page under the Contact Us section.</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AAkPay__Organiser_Organisation__c</fullName>
        <inlineHelpText>Name of the organisation that is setting up and running the event.  This will appear on the events registration page under the Contact Us section.</inlineHelpText>
        <label>Organisation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Organiser_Phone__c</fullName>
        <inlineHelpText>Phone Number of the organisation that is setting up and running the event.  This will appear on the events registration page under the Contact Us section.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AAkPay__Organiser_When_Contacting_Us__c</fullName>
        <inlineHelpText>Notes for when contact the organisation that is setting up and running the event.  This will appear on the events registration page under the Contact Us section.</inlineHelpText>
        <label>When Contacting Us</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AAkPay__Payment_Form_Text__c</fullName>
        <inlineHelpText>Text to appear on the Payment.  Use this to describe the campaign for which the funds are being collected.</inlineHelpText>
        <label>Payment Form Text</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AAkPay__Payment_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Option</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Payment Option is not related to the Campaign Payment Form</errorMessage>
            <filterItems>
                <field>AAkPay__Payment_Options__c.AAkPay__Payment_Type__c</field>
                <operation>equals</operation>
                <valueField>$Source.AAkPay__Payment_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AAkPay__Payment_Options__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAkPay__Payment_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Form</label>
        <referenceTo>AAkPay__Payment_Type__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAkPay__Peer_to_Peer_Registration_URL__c</fullName>
        <formula>AAkPay__Payment_Type__r.AAkPay__Payment_Setting__r.AAkPay__Site_URL__c&amp;&quot;AAkPay__P2PRegistration?&quot;&amp;IF(ISBLANK(AAkPay__URL_Token__c),&quot;camid=&quot;&amp;Id, AAkPay__URL_Token__r.AAkPay__URL_Parameters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peer-to-Peer Registration URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Profile_Photo_Image__c</fullName>
        <formula>IF(ISBLANK(AAkPay__Profile_Photo__c),
   IMAGE(&quot;/resource/AAkPay__paymentResource/images/MissingProfilePicture.jpg&quot;,AAkPay__Event_Name__c),
   IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+ AAkPay__Profile_Photo__c&amp;&quot;&amp;oid=&quot;&amp;$Organization.Id,  AAkPay__Event_Name__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Profile_Photo__c</fullName>
        <inlineHelpText>Peer-to-peer fundraising profile photo - document/attachment record id.</inlineHelpText>
        <label>Profile Photo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Publish_on_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selecting this will make this campaign available on the website for payments/appeals section of the payment form. This will only appear when Enable Appeals is also selected for the payment type.</inlineHelpText>
        <label>Publish on Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__Receipt_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Letter</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Letter must be of record type: Receipt</errorMessage>
            <filterItems>
                <field>AAkPay__Letter__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Receipt</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AAkPay__Letter__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAkPay__Receipt_Text__c</fullName>
        <inlineHelpText>Text that will appear in the main part of the receipt for online payments.
This field is no longer in use.  Please use the Receipt Letter Lookup instead.</inlineHelpText>
        <label>Receipt Text (OLD)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AAkPay__Start_Date_Time_GMT__c</fullName>
        <description>Updated automatically on save from Start Date + Start Time.</description>
        <label>Start Date/Time GMT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Start_Date_Time_ISO8601__c</fullName>
        <label>Start Date/Time ISO8601</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Start_Day__c</fullName>
        <formula>RIGHT(&quot;00&quot;&amp; TEXT(DAY(StartDate )),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>0:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAkPay__State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Statement_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement Letter</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Letter must have record type of Statement</errorMessage>
            <filterItems>
                <field>AAkPay__Letter__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Statement</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AAkPay__Letter__c</referenceTo>
        <relationshipLabel>Campaigns (Statement Letter)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAkPay__Statement_Options__c</fullName>
        <label>Statement Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AAkPay__Statement_Status__c</fullName>
        <inlineHelpText>Statement Status indicates if the Statements have been generated or sent.  Workflow rules are used notify requestions of generation/sending when complete.</inlineHelpText>
        <label>Statement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Statement Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAkPay__Statement_Text__c</fullName>
        <inlineHelpText>Replaced with Statement Letter</inlineHelpText>
        <label>Statement Text (OLD)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AAkPay__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AAkPay__Target__c</fullName>
        <formula>IF(ExpectedRevenue=0,
   0,
   AmountWonOpportunities / ExpectedRevenue 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AAkPay__Team_Member_Signup_Link__c</fullName>
        <formula>HYPERLINK(AAkPay__Payment_Type__r.AAkPay__Payment_Setting__r.AAkPay__Site_URL__c&amp;&quot;AAkPay__P2PTeamMemberRegistration?&quot;&amp;AAkPay__URL_Token__r.AAkPay__URL_Parameters__c,&quot;Join the Team&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Signup Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__URL_Token__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>URL Token</label>
        <referenceTo>AAkPay__URL_Tokens__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAkPay__Venue_Name__c</fullName>
        <label>Venue Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__iCal_Id__c</fullName>
        <inlineHelpText>Attachment salesforce.com id.  This is automatically updated when a new ical is generated.  New iCal&apos;s are generated when the event start date/time and venue name/address details change.</inlineHelpText>
        <label>iCal Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>AAkPay__Annual_Statement</fullName>
        <active>true</active>
        <description>Annual Statement</description>
        <label>Annual Statement</label>
    </recordTypes>
    <recordTypes>
        <fullName>AAkPay__Event</fullName>
        <active>true</active>
        <description>Event, Training course, Fundraising Diner/Sports day</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>AAkPay__Peer_to_Peer</fullName>
        <active>true</active>
        <description>Peer to Peer fundraising - Parent Campaign</description>
        <label>Peer-to-Peer</label>
    </recordTypes>
    <recordTypes>
        <fullName>AAkPay__Peer_to_Peer_Fundraiser</fullName>
        <active>true</active>
        <description>Peer to Peer fundraising - Team or Individual</description>
        <label>Peer-to-Peer Fundraiser</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>